--- a/less/home-page.less
+++ b/less/home-page.less
@@ -15,8 +15,7 @@
   }
 
   .space-images {
-    display: flex;
-    flex-wrap: wrap;
+    .flex();
     width: 100%;
 
     img {
@@ -24,8 +23,22 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone{
+        width:95%;
+        .margin();
+      }
     }
   }
+.sky{
+  @media @phone{
+    display:none;
+  }
+}
+.launch{
+  @media @phone{
+    display:none;
+  }
+}
 
   .visit-planets {
     padding: 15px;
@@ -36,40 +49,73 @@
 
     p {
       margin-top: 13px;
+     
     }
   }
-
+}
   .walk {
+    width:100%;
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
-    padding: 50px 60px;
+    padding-bottom:20px;
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
+    @media @phone{
+      .flex();
+      width:95%;
+      .margin();
+      margin-top:20px;
+    }
 
-    .walk-text {
+  .walk-text {
+      display:flex;
+      flex-direction:column;
       width: 50%;
-
+      margin-left: -50%;
+      @media @phone{
+        .flex();
+        width:95%;
+        .margin();
+       
+      }
+    }
       h3 {
         margin-bottom: 10px;
       }
 
       p {
-        margin-bottom: 26px;
+        margin-bottom: 10px;
       }
-
-      .btn {
+.btn {
+        .signmeupbutton(@bg-colour:#22283A, @width:35%,@font-colour: white)
       }
-    }
-
+     
+}
     .walk-img {
-      width: 46%;
-      margin-left: 4%;
-      
-      img {
+      margin-top:15%;
+      display:flex;
+      width: 100%;
+      margin-left: 100%;
+      height:auto;
+      @media @phone{
+        display:flex;
+        width:95%;
+        .margin();
+        padding-bottom:15px;
+       }
+        img {
         width: 100%;
         height: auto;
         border-radius: 10px;
       }
+    
+  }
+  .walk-text2{
+    margin-top:-300px;
+    padding-bottom:60px;
+    @media @phone{
+      margin-top:0;
+      padding-bottom:0;
+
     }
   }
-}// home
