--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation code here
+
+h1{
+  display:flex;
+  justify-content:center;
+  font-size:3rem;
+  padding-top:10px;
+}
+
+.navcontainer{
+    display:flex;
+    justify-content:space-evenly;
+    width:40%;
+    margin-left:30%;
+    margin-right:30%;
+    font-size:2rem;
+    padding-bottom:10px;
+    padding-top:10px;
+   
+ @media @phone {
+      width:98%;
+      margin-left:1%;
+      margin-right:1%;
+  }
+}
